tests/platform_import_alias_bad.stderr
tests/platform_import_alias_bad.sl:1:8: error: unexpected token
