tests/platform_import_alias_bad.sl
import p "platform"

fn main() {}
